--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ install:
 
 script:
     # Check that the documentation builds without warnings
-    - cd $TRAVIS_BUILD_DIR ; make SPHINXOPTS=-W clean html
+    - cd $TRAVIS_BUILD_DIR/docs ; make SPHINXOPTS=-W clean html
     - cd ~ ; python -m numba.testing -v -b -m
     #- if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then cd $HOME; py.test --udf $HOME/impyla/impala/tests/test_udf_compile.py; fi
 
