--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - export PATH=$HOME/miniconda3/bin:$PATH
   - PY_MAJOR_MINOR=${TRAVIS_PYTHON_VERSION:0:3}
   # Setup environment
-  - conda create -n travisci --yes python=$PY_MAJOR_MINOR numpy cffi pip
+  - conda create -n travisci --yes python=$PY_MAJOR_MINOR numpy cffi
   - source activate travisci
   # Install llvmdev (separate channel, for now)
   - conda install --yes -c numba llvmdev
@@ -29,7 +29,7 @@ before_install:
   # Install enum34 for Python < 3.4
   - if [ $PY_MAJOR_MINOR \< "3.4" ]; then conda install --yes enum34; fi
   # Install funcsigs for Python < 3.3
-  - if [ $PY_MAJOR_MINOR \< "3.3" ]; then pip install funcsigs; fi
+  - if [ $PY_MAJOR_MINOR \< "3.3" ]; then conda install --yes funcsigs; fi
   # The next couple lines fix a crash with multiprocessing on Travis
   # and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
