Install from Numba channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   # Install enum34 for Python < 3.4
   - if [ $PY_MAJOR_MINOR \< "3.4" ]; then conda install --yes enum34; fi
   # Install funcsigs for Python < 3.3
-  - if [ $PY_MAJOR_MINOR \< "3.3" ]; then conda install --yes funcsigs; fi
+  - if [ $PY_MAJOR_MINOR \< "3.3" ]; then conda install --yes -c numba funcsigs; fi
   # The next couple lines fix a crash with multiprocessing on Travis
   # and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
