--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md setup.py runtests.py versioneer.py CHANGE_LOG AUTHORS LICENSE
+include README.rst setup.py runtests.py versioneer.py CHANGE_LOG AUTHORS LICENSE
 recursive-include docs *.ipynb *.txt *.py Makefile *.rstls
 prune docs/_build
 prune docs/gh-pages
