Use system=5.8-2 to workaround libm problem

--- a/buildscripts/condarecipe.hsa/meta.yaml
+++ b/buildscripts/condarecipe.hsa/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     # On channel https://binstar.org/numba/
     - llvmlite
     - funcsigs       [py26 or py27]
+    - system 5.8 2
 test:
   requires:
     - argparse       [py26]
