--- a/buildscripts/condarecipe.local/meta.yaml
+++ b/buildscripts/condarecipe.local/meta.yaml
@@ -1,27 +1,30 @@
 package:
    name: numba
-   version: 99.9.9
+   version: {{ environ.get('GIT_DESCRIBE_TAG','') }}
+
+source:
+   path: ../..
 
 build:
-  #entry_points:
-  #  - pycc = numba.pycc:main
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
 
 requirements:
   build:
-    - numpy
-    #- chrpath         [linux]
     - python
-    #- llvmmath
+    - numpy
   run:
     - python
     - argparse        [py26]
     - numpy
-    - llvmpy
-    #- llvmmath
-
+    # On channel https://binstar.org/numba/
+    - llvmlite 0.4.0
+    - funcsigs       [py26 or py27]
 test:
   requires:
-    - unittest2       [py26]
+    - argparse       [py26]
+    - unittest2      [py26]
+    - cudatoolkit
+  files:
+    - mandel.py
   commands:
     - pycc -h
-    - numba -h
