Add jinja2 to test requirement

--- a/buildscripts/condarecipe/meta.yaml
+++ b/buildscripts/condarecipe/meta.yaml
@@ -27,6 +27,7 @@ test:
     - argparse       [py26]
     - unittest2      [py26]
     - cudatoolkit
+    - jinja2
   files:
     - mandel.py
   commands:
