--- a/buildscripts/condarecipe.jenkins/meta.yaml
+++ b/buildscripts/condarecipe.jenkins/meta.yaml
@@ -7,8 +7,9 @@ source:
 
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
-  #entry_points:
-  #  - pycc = numba.pycc:main
+  entry_points:
+    - pycc = numba.pycc:main
+    - numba = numba.numba_entry:main
 
 requirements:
   build:
@@ -31,3 +32,4 @@ test:
     - mandel.py
   commands:
     - pycc -h
+    - numba -h
