--- a/buildscripts/condarecipe.local/meta.yaml
+++ b/buildscripts/condarecipe.local/meta.yaml
@@ -12,9 +12,15 @@ build:
     - numba = numba.numba_entry:main
 
 requirements:
+  # build and run dependencies are duplicated to avoid setuptools issues
+  # when we also set install_requires in setup.py
   build:
     - python
+    - argparse        [py26]
     - numpy
+    # On channel https://binstar.org/numba/
+    - llvmlite 0.4.0
+    - funcsigs       [py26 or py27]
   run:
     - python
     - argparse        [py26]
