--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 # References https://gist.github.com/dan-blanchard/7045057
 language: python
 
-python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
+matrix:
+  include:
+    - python: 2.6
+      env: NUMPY="numpy==1.6"
+    - python: 2.7
+      env: NUMPY=numpy
+    - python: 3.3
+      env: NUMPY=numpy
+    - python: 3.4
+      env: NUMPY=numpy
 
 branches:
   only:
@@ -20,7 +25,7 @@ before_install:
   - export PATH=$HOME/miniconda3/bin:$PATH
   - PY_MAJOR_MINOR=${TRAVIS_PYTHON_VERSION:0:3}
   # Setup environment
-  - conda create -n travisci --yes python=$PY_MAJOR_MINOR numpy cffi
+  - conda create -n travisci --yes python=$PY_MAJOR_MINOR $NUMPY cffi
   - source activate travisci
   # Install llvmdev (separate channel, for now)
   - conda install --yes -c numba llvmdev="3.5*"
