--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ matrix:
     - python: 2.6
       env: NUMPY="numpy=1.6"
     - python: 2.7
-      env: NUMPY=numpy
+      env: NUMPY="numpy=1.7"
     - python: 3.3
-      env: NUMPY=numpy
+      env: NUMPY="numpy=1.8"
     - python: 3.4
       env: NUMPY=numpy
 
