Simplify setup.py and avoid manual maintenance of lists of packages and C source files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,18 @@
 *.dylib
 *.pyd
 *.pdb
+*.egg-info
+*.sw[po]
 .coverage
+tags
+MANIFEST
+
 build/
 docs/_build/
 docs/gh-pages/
 dist/
 htmlcov/
-*.egg-info
-*.sw[po]
 .idea/
-tags
+.ipynb_checkpoints/
+__pycache__/
+
