--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,15 @@ branches:
     - master
     - llvmlite2
 
+sudo: false
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 before_install:
   # Install Miniconda
   - wget http://repo.continuum.io/miniconda/Miniconda3-3.7.0-Linux-x86_64.sh -O miniconda.sh
@@ -35,17 +44,6 @@ before_install:
   - if [ $PY_MAJOR_MINOR \< "3.4" ]; then conda install --yes enum34; fi
   # Install funcsigs for Python < 3.3
   - if [ $PY_MAJOR_MINOR \< "3.3" ]; then conda install --yes -c numba funcsigs; fi
-  # The next couple lines fix a crash with multiprocessing on Travis
-  # and are not specific to using Miniconda
-  - sudo rm -rf /dev/shm
-  - sudo ln -s /run/shm /dev/shm
-  # We need this line to have g++ 4.8 available in apt
-  # (Travis' default gcc version doesn't support C++11).
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-4.8 g++-4.8
-  # Force g++ 4.8 to be the default version
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   # Install dependencies for building the documentation
   - conda install --yes pip sphinx pygments
   - pip install sphinxjp.themecore sphinxjp.themes.basicstrap
@@ -57,6 +55,7 @@ before_install:
 
 install:
     # Build and install llvmlite from source
+    - export CXX=g++-4.8
     - git clone git://github.com/numba/llvmlite.git -q
     - cd llvmlite && python setup.py build && python setup.py install -q >/dev/null && cd ..
     # Build numba extensions without silencing compile errors
