--- a/buildscripts/condarecipe.jenkins/meta.yaml
+++ b/buildscripts/condarecipe.jenkins/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     # On channel https://binstar.org/numba/
     - llvmlite 0.6*
     - funcsigs       [py26 or py27]
+    - singledispatch [py26 or py27 or py33]
   run:
     - python
     - argparse        [py26]
@@ -28,6 +29,7 @@ requirements:
     # On channel https://binstar.org/numba/
     - llvmlite 0.6*
     - funcsigs       [py26 or py27]
+    - singledispatch [py26 or py27 or py33]
 test:
   requires:
     - argparse       [py26]
