Add webhook for gitter <-> Travis integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,3 +82,9 @@ notifications:
   flowdock: "cb7bc57e58b3d42f77685f93211c03ab"
   on_success: "change"
   on_failure: "always" # "change"
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/bd67cc227432d99bf1f1
+    on_success: change
+    on_failure: always
+    on_start: false
