--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ matrix:
     - python: 3.3
       env: NUMPY="numpy=1.8"
     - python: 3.4
-      env: NUMPY=numpy
+      env: NUMPY="numpy=1.9"
+    - python: 3.5-dev
+      # TODO: change this to 1.10 when we're ok
+      env: NUMPY="numpy=1.9"
 
 branches:
   only:
