--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ matrix:
     - python: 3.4
       env: NUMPY="numpy=1.9"
     - python: 3.5-dev
-      env: NUMPY="numpy=1.10"
+      # TODO: change this to 1.10 when we're ok
+      env: NUMPY="numpy=1.9"
 
 branches:
   only:
