--- a/buildscripts/condarecipe.jenkins/meta.yaml
+++ b/buildscripts/condarecipe.jenkins/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: {{ environ.get('GIT_DESCRIBE_TAG','') }}
 
 source:
-  git_url: git@github.com:numba/numba.git
+  git_url: https://github.com/numba/numba
 
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
