--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ before_install:
   - export PATH=$HOME/miniconda3/bin:$PATH
   - PY_MAJOR_MINOR=${TRAVIS_PYTHON_VERSION:0:3}
   # Setup environment
+  - conda update --yes conda
   - conda create -n travisci --yes python=$PY_MAJOR_MINOR $NUMPY cffi pip
   - source activate travisci
   - CONDA_INSTALL="conda install --yes -q"
