--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,9 @@ dist: trusty
 matrix:
   include:
     - env: PYTHON=2.6 NUMPY="numpy=1.6"
-    #- env: PYTHON=2.7
-      #env: NUMPY="numpy=1.7"
-    #- env: PYTHON=3.3
-      #env: NUMPY="numpy=1.8"
-    #- env: PYTHON=3.4
-      #env: NUMPY="numpy=1.9"
+    - env: PYTHON=2.7 NUMPY="numpy=1.7"
+    - env: PYTHON=3.3 NUMPY="numpy=1.8"
+    - env: PYTHON=3.4 NUMPY="numpy=1.9"
     - env: PYTHON=3.5 NUMPY="numpy=1.10"
 
 branches:
