Fix #1628: fix ctypes and cffi tests under Windows
Also add cffi and scipy to the installed modules on the Jenkins builder.

--- a/buildscripts/condarecipe.jenkins/meta.yaml
+++ b/buildscripts/condarecipe.jenkins/meta.yaml
@@ -35,6 +35,9 @@ test:
     - argparse       [py26]
     - unittest2      [py26]
     - jinja2
+    # Required to test optional Numba features
+    - cffi
+    - scipy
   files:
     - mandel.py
   commands:
